# iscc-observer-evm

./: .env.dev  .gitignore  CHANGELOG.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
iscc_observer_evm/: __init__.py  __main__.py  abi.json  chain.py  models.py  registry.py  settings.py
tests/: test_iscc_observer_evm.py  test_registry.py  test_settings.py
tools/: lf.py
