[tool.poetry]
name = "iscc-observer-evm"
version = "0.1.0"
description = "ISCC Decentralized Content Registry - Observer Service for EVM based Blockchains."
authors = ["Titusz <tp@py7.de>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://iscc.codes"
repository = "https://github.com/iscc/iscc-observer-evm"
keywords=["iscc", "identifier", "media", "content", "decentralized", "registry", "observer"]


[tool.poetry.dependencies]
python = ">3.7.0,<3.7.1 || >3.7.1,<4.0"
web3 = "^5.29.0"
cython = "*"
iscc-core = {url = "https://files.pythonhosted.org/packages/dc/ac/b89f1efbaf495b8788f8fd69fd287bfa124eb0509061686eac9e47213499/iscc-core-0.2.7.tar.gz"}


[tool.poetry.dev-dependencies]
pytest = "*"
black = "*"
poethepoet = "*"
isort = "^5.10.1"

[tool.black]
skip-string-normalization = false
line-length = 100
target-version = ['py37']

[tool.pytest.ini_options]


[tool.poe.tasks]
isort = { cmd = "poetry run isort .", help = "Sort imports with isort"}
format = { cmd = "poetry run black .", help = "Code style formating with black" }
test = { cmd = "poetry run pytest", help = "Run tests with coverage" }
all = ["isort", "format", "test"]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
